# user

./: .dockerignore  .env  Cargo.toml  Dockerfile  docker-compose.yml  rustfmt.toml
init-mongo/: init.js
src/: context.rs  core.rs  data.rs  db.rs  error.rs  handlers.rs  lib.rs  main.rs  middleware.rs  utils.rs
src/core/: domain.rs  operation.rs
src/core/domain/: auth.rs  perm.rs  user.rs
src/core/domain/auth/: auth_error.rs  auth_repo.rs  auth_type.rs
src/core/domain/perm/: perm_cat.rs  perm_error.rs  perm_repo.rs  perm_type.rs
src/core/domain/user/: user_error.rs  user_repo.rs  user_type.rs
src/core/operation/: auth_ops.rs  catalogs_ops.rs  perms_ops.rs  user_ops.rs
src/data/: access.rs  catalog_importer.rs
src/data/access/: auth_repo.rs  migration.rs  perms_repo.rs  user_repo.rs
src/data/access/migration/: migrator.rs  mongo.rs
src/data/access/migration/mongo/: v01.rs
src/handlers/commands/: mod.rs  permsrelationship_commands.rs  user_command.rs
src/handlers/http/: mod.rs
src/handlers/http/auth/: auth_routes.rs
src/handlers/http/catalogs/: catalog_data.rs  catalog_routes.rs  mod.rs
src/handlers/http/users/: user_routes.rs
src/utils/: domains_ids.rs
tests/: import_admin.rs  import_perms.rs
tests/fixtures/: perms.json  perms_relationship.json  user_admin.json
