[package]
name = "user"
version = "0.1.0"
edition = "2021"

[dependencies]
futures-util = "0.3.30"
clap = { version = "4.3.5", features = ["derive"] }
warp = "0.3.0"
serde = { version = "1.0", features = ["derive"] }
mongodb = "3.1.0"
tracing = "0.1"
dotenv = "0.15"
actix-web = "4.9.0"
actix-cors = "0.7.0"
async-trait = "0.1.82"
bcrypt = "0.11"
env_logger = "0.11.5"
futures = "0.3.31"
jsonwebtoken = "9.3.0"
actix-service = "2.0.2"
tokio = "1.40.0"
serde_json = "1.0.128"
thiserror = "1.0.69"
chrono = "0.4.39"