[package]
name = "user"
version = "0.1.0"
edition = "2021"

[dependencies]
futures-util = "0.3.31"
serde = { version = "1.0", features = ["derive"] }
mongodb = "3.2.3"
tracing = "0.1"
dotenv = "0.15"
actix-web = "4.11.0"
actix-cors = "0.7.1"
async-trait = "0.1.88"
bcrypt = "0.17"
env_logger = "0.11.8"
serde_json = "1.0.140"
thiserror = "2.0.12"
chrono = { version = "0.4", features = ["serde"] }
perms = { version = "0.1.2",path= "../librerias/perms"}
